--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ x11rb = { version = "0.13", features = ["composite", "render", "damage"] }
 thiserror = "1.0"
 log = "0.4"
 env_logger = "0.11"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+dirs = "5.0"
 
 [profile.release]
 opt-level = 3
